minio/minio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - minio.thedoodleproject.org
    secretName: tls-secret
  rules:
  - host: minio.thedoodleproject.org
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: 9000
